--- a/post.hbs
+++ b/post.hbs
@@ -3,8 +3,8 @@
 {{#post}}
 
 <section id="main" class="container">
-        <div class="row uniform 200%">
-            <aside class="author-box 4u">
+        <div class="row uniform">
+            <aside class="author-box 4u 12u$(3)">
                 <div class="post-author">
                     {{#if author.image}}
                     <div class="author-image">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </aside>
-            <article class="{{post_class}} single 8u">
+            <article class="{{post_class}} single 8u 12u$(3) important(3)">
                 <div class="post-container">
                     <header class="post-header">
             <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
