--- a/assets/css/style-medium.css
+++ b/assets/css/style-medium.css
@@ -23,9 +23,7 @@ body, input, select, textarea {
 #navButton .toggle {
   text-decoration: none;
   height: 100%;
-  left: 0;
   position: absolute;
-  top: 0;
   width: 100%; }
   /* line 24, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/mixins */
   #navButton .toggle:before {
@@ -36,47 +34,47 @@ body, input, select, textarea {
     font-style: normal;
     font-weight: normal;
     text-transform: none !important; }
-  /* line 41, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 39, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
   #navButton .toggle:before {
-    background: rgba(144, 144, 144, 0.65);
-    border-radius: 4px;
+    background: #8CD9D3;
     color: #fff;
     display: block;
     font-size: 16px;
-    height: 2.25em;
-    left: 0.5em;
-    line-height: 2.25em;
+    height: 1.75em;
+    left: 0;
+    margin-left: -1.75em;
+    line-height: 1.75em;
     position: absolute;
     text-align: center;
-    top: 0.5em;
+    top: 0;
     width: 3.5em; }
 
-/* line 58, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+/* line 56, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
 #navPanel {
-  background: #444;
+  background: #8CD9D3;
   color: #fff; }
-  /* line 62, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+  /* line 60, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
   #navPanel nav {
     padding: 0.5em 1.25em; }
-    /* line 65, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 63, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
     #navPanel nav ul {
       list-style: none;
       margin: 0;
       padding: 0; }
-      /* line 70, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+      /* line 68, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
       #navPanel nav ul li {
         padding: 0; }
-        /* line 74, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+        /* line 72, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
         #navPanel nav ul li:first-child a:not(.button), #navPanel nav ul li:first-child span:not(.button) {
           border-top: 0; }
-        /* line 79, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+        /* line 77, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
         #navPanel nav ul li a:not(.button), #navPanel nav ul li span:not(.button) {
-          border-top: solid 1px #555;
+          border-top: solid 1px rgba(255, 255, 255, 0.75);
           color: #fff;
           display: block;
           padding: 0.75em 0;
           text-decoration: none; }
-    /* line 89, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
+    /* line 87, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-medium.scss */
     #navPanel nav .button {
       width: 100%; }
 
