--- a/assets/sass/style-medium.scss
+++ b/assets/sass/style-medium.scss
@@ -33,30 +33,28 @@
 		.toggle {
 			@include icon('\f0c9');
 			height: 100%;
-			left: 0;
 			position: absolute;
-			top: 0;
 			width: 100%;
 
 			&:before {
-				background: rgba(144,144,144,0.65);
-				border-radius: $size-border-radius;
+				background: $color-accent-bg;
 				color: #fff;
 				display: block;
 				font-size: 16px;
-				height: 2.25em;
-				left: 0.5em;
-				line-height: 2.25em;
+				height: 1.75em;
+				left: 0;
+                margin-left:-1.75em;
+				line-height: 1.75em;
 				position: absolute;
 				text-align: center;
-				top: 0.5em;
+				top: 0;
 				width: 3.5em;
 			}
 		}
 	}
 
 	#navPanel {
-		background: #444;
+		background: $color-accent-bg;
 		color: #fff;
 
 		nav {
@@ -77,7 +75,7 @@
 					}
 
 					a:not(.button), span:not(.button) {
-						border-top: solid $size-border-width #555;
+						border-top: solid $size-border-width rgba(255,255,255,0.75);
 						color: #fff;
 						display: block;
 						padding: 0.75em 0;
