--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,25 +744,24 @@ input[type="submit"], input[type="reset"], input[type="button"], .button, .post-
   line-height: 2.75em;
   border-top: solid 1px #ccc;
   border-bottom: solid 1px #ccc;
-  margin-bottom: 3em;
   text-align: center;
   color: #ccc; }
-  /* line 859, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 858, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #sub-header ul {
     margin: 0; }
-  /* line 863, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 862, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #sub-header a {
     color: inherit; }
 
 /* Banner */
-/* line 869, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 868, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 #feature {
   padding: 2em 0;
   text-align: center; }
-  /* line 873, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 872, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #feature :last-child {
     margin-bottom: 0; }
-  /* line 878, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 877, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #feature .post-header h2 {
     font-size: 4em;
     line-height: 1em;
@@ -770,39 +769,39 @@ input[type="submit"], input[type="reset"], input[type="button"], .button, .post-
     padding: 0; }
 
 /* Main */
-/* line 890, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 889, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 #main {
   padding: 1em 0; }
 
 /* Footer */
-/* line 896, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 895, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 #footer {
   background: #8CD9D3;
   padding: 2em 0;
   margin-top: 4em;
   color: #fff;
   text-align: center; }
-  /* line 903, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 902, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #footer .icon {
     font-size: 1.5em; }
-  /* line 907, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 906, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #footer a {
     color: inherit; }
-  /* line 911, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 910, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   #footer .copyright {
     color: inherit;
     font-size: 0.9em;
     margin: 2em 0 0 0;
     padding: 0;
     text-align: center; }
-    /* line 918, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+    /* line 917, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
     #footer .copyright li {
       border-left: solid 1px rgba(144, 144, 144, 0.25);
       display: inline-block;
       list-style: none;
       margin-left: 1.5em;
       padding-left: 1.5em; }
-      /* line 925, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+      /* line 924, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
       #footer .copyright li:first-child {
         border-left: 0;
         margin-left: 0;
@@ -810,60 +809,63 @@ input[type="submit"], input[type="reset"], input[type="button"], .button, .post-
 
 /* Ghost Stuff */
 /* Loop */
-/* line 940, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 939, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 .post-loop header h2, .post-loop .author-meta h2 {
   margin: 0 0 0.65em 0; }
-/* line 944, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 943, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 .post-loop header h2 + p, .post-loop .author-meta h2 + p {
   font-size: 0.9em;
   margin-bottom: 0; }
-/* line 950, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 949, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 .post-loop article {
   margin: 0 0 1em 0;
   min-height: 100px; }
-/* line 955, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 954, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 .post-loop .pagination {
   width: 100%;
   text-align: center;
   position: relative; }
-  /* line 960, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 959, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   .post-loop .pagination .older-posts, .post-loop .pagination .newer-posts {
     position: absolute; }
-  /* line 966, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 965, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   .post-loop .pagination .older-posts {
     right: 0; }
-  /* line 970, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 969, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   .post-loop .pagination .newer-posts {
     left: 0; }
 
-/* line 976, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+/* line 975, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 .loop-excerpt {
   text-align: left; }
-  /* line 979, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 978, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   .loop-excerpt .post-header, .loop-excerpt .post-image {
     margin-bottom: 0.5em; }
-    /* line 981, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+    /* line 980, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
     .loop-excerpt .post-header h1, .loop-excerpt .post-header h2, .loop-excerpt .post-header h3, .loop-excerpt .post-header h4, .loop-excerpt .post-header h5, .loop-excerpt .post-header h6, .loop-excerpt .post-image h1, .loop-excerpt .post-image h2, .loop-excerpt .post-image h3, .loop-excerpt .post-image h4, .loop-excerpt .post-image h5, .loop-excerpt .post-image h6 {
       font-weight: 300; }
-  /* line 986, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 985, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   .loop-excerpt .post-content h1, .loop-excerpt .post-content h2, .loop-excerpt .post-content h3, .loop-excerpt .post-content h4, .loop-excerpt .post-content h5, .loop-excerpt .post-content h6 {
     font-size: 1em;
     margin: 0; }
-  /* line 991, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  /* line 990, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
   .loop-excerpt .post-content p {
     margin: 1.5em 0 !important; }
 
-/* line 998, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
-.post-featured:after {
-  content: 'Featured Post';
-  position: absolute;
-  background-color: #8CD9D3;
-  color: #fff;
-  padding: 0.25em 0.5em;
-  font-size: 0.5em;
-  margin-top: 0.65em;
-  line-height: 1.25em;
-  margin-left: 1.5em; }
+/* line 996, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+.post-featured {
+  padding-bottom: 1em; }
+  /* line 998, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
+  .post-featured:after {
+    content: 'Featured Post';
+    position: absolute;
+    display: block;
+    background-color: #8CD9D3;
+    color: #fff;
+    padding: 0.25em 0.5em;
+    font-size: 0.5em;
+    margin-top: 0.65em;
+    line-height: 1.25em; }
 
 /* line 1011, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 .feature-image, .post-image {
