--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,7 +1,7 @@
 {{! This is the post loop - each post will be output using this markup }}
 
 <div class="row uniform">
-<header class="12u$ section-header"><h3>Latest Posts</h3><hr/></header>
+<header class="12u$ section-header"><h3>Latest Posts</h3></header>
 {{#foreach posts}}
     <div class="row uniform">
     <section class="loop-image 8u 12u$(2)">
