--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -742,8 +742,8 @@ input[type="submit"], input[type="reset"], input[type="button"], .button, .post-
 #sub-header {
   min-height: 2.75em;
   line-height: 2.75em;
-  border-top: solid 1px #ccc;
-  border-bottom: solid 1px #ccc;
+  border-top: solid 1px rgba(144, 144, 144, 0.25);
+  border-bottom: solid 1px rgba(144, 144, 144, 0.25);
   text-align: center;
   color: #ccc; }
   /* line 858, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
