Removed hr element from last post in loop. Beautified code.

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -4,22 +4,25 @@
 <header class="12u$ section-header"><h3>Latest Posts</h3></header>
 {{#foreach posts}}
     <div class="row uniform">
-    <section class="loop-image 8u 12u$(2)">
-        {{#if image}}<a href="{{url}}" class="feature-image"><img src="{{image}}" /></a>{{/if}}
-    </section>
-    <section class="loop-excerpt 4u$ 12u$(2)">
-        <div class="post-container">
-            <header class="post-header">
-                <h3 class="post-title {{#if featured}}post-featured{{/if}}"><a href="{{url}}">{{title}}</a></h3>
-                <p class="post-meta">by {{author}} on <time class="blog-date" datetime="{{date format='MMMM DD, YYYY'}}">{{date format="MMMM DD, YYYY"}}</time></p>
-            </header>
-            <article class="post-content">
-                <p>{{excerpt characters="300"}}...</p>
-            </article>
-            <a href="{{url}}" class="read-more">Read More »</a>
-        </div>
-    </section>
-    <div class="12u$"><hr/></div>
+        <section class="loop-image 8u 12u$(2)">
+            {{#if image}}<a href="{{url}}" class="feature-image"><img src="{{image}}" /></a>{{/if}}
+        </section>
+        <section class="loop-excerpt 4u$ 12u$(2)">
+            <div class="post-container">
+                <header class="post-header">
+                    <h3 class="post-title {{#if featured}}post-featured{{/if}}"><a href="{{url}}">{{title}}</a></h3>
+                    <p class="post-meta">by {{author}} on <time class="blog-date" datetime="{{date format='MMMM DD, YYYY'}}">{{date format="MMMM DD, YYYY"}}</time></p>
+                </header>
+                <article class="post-content">
+                    <p>{{excerpt characters="300"}}...</p>
+                </article>
+                <a href="{{url}}" class="read-more">Read More »</a>
+            </div>
+        </section>
+        {{#if @last}}
+        {{else}}
+        <div class="12u$"><hr/></div>
+        {{/if}}
     </div>
 {{/foreach}}
 </div>
