Fixed spacing on posts/pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -771,7 +771,7 @@ input[type="submit"], input[type="reset"], input[type="button"], .button {
 /* Main */
 /* line 889, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
 #main {
-  padding: 1em 0; }
+  padding: 4em 0 0 0; }
 
 /* Footer */
 /* line 895, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style.scss */
