--- a/post.hbs
+++ b/post.hbs
@@ -24,10 +24,11 @@
             <article class="{{post_class}} single 8u 12u$(3) important(3)">
                 <div class="post-container">
                     <header class="post-header">
-            <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
+            <h1 class="post-title {{#if featured}}post-featured{{/if}}"><a href="{{url}}">{{title}}</a></h1>
             <p class="post-meta">by {{author}} on <time class="blog-date" datetime="{{date format='MMMM DD, YYYY'}}">{{date format="MMMM DD, YYYY"}}</time></p>
+            {{#if image}}<a href="{{url}}" class="feature-image"><img src="{{image}}" /></a>{{/if}}
         </header>
-                    <section class="post-content"><ul class="archiveTest"></ul>{{content}}</section>
+                    <section class="post-content">{{content}}</section>
                 </div>
                 <div class="comment-area">
                     {{>comment-box}}
