Changed default menu. Fixed static Page heading.

--- a/page.hbs
+++ b/page.hbs
@@ -10,6 +10,7 @@
 <section id="main" class="container">
     <div class="row uniform">
         <article class="{{post_class}} page-content 12u">
+            <h1 class="post-title {{#if featured}}post-featured{{/if}}"><a href="{{url}}">{{title}}</a></h1>
             <section class="page-content">
                 {{content}}
             </section>
