--- a/partials/menu.hbs
+++ b/partials/menu.hbs
@@ -8,16 +8,8 @@
 
 {{!Begin Menu Item}}
 <li>
-	<a href="#top"> <!-- Do not change to keep as {{@blog.url}}" for Home-->
+	<a href="{{@blog.url}}/about"> <!-- Do not change to keep as {{@blog.url}}" for Home-->
 		About <!-- Change menu item text -->
-	</a>
-</li>
-{{!End Menu Item}}
-
-{{!Begin Menu Item}}
-<li>
-	<a href="#content"> <!-- Over on the left, change to your static url text {{@blog.url}}/your-url-slug-->
-		Contact <!-- Change menu item text -->
 	</a>
 </li>
 {{!End Menu Item}}
