Removed old call to menu partial and added new navigation.

--- a/partials/header/header-default.hbs
+++ b/partials/header/header-default.hbs
@@ -5,9 +5,7 @@
             <div class="header-container">
                 <h1><a href="{{@blog.url}}">Aventurine</a></h1>
                 <nav id="nav">
-                    <ul>
-                        {{>menu}}
-                    </ul>
+                    {{navigation}}
                 </nav>
             </div>
         </div>
