--- a/assets/css/style-xlarge.css
+++ b/assets/css/style-xlarge.css
@@ -1,11 +1,6 @@
 /* Basic */
-/* line 6, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-xlarge.scss */
+/* line 6, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-xlarge.scss */
 body, input, select, textarea {
   font-size: 11pt; }
-
-/* Banner */
-/* line 12, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-xlarge.scss */
-#banner {
-  padding: 7em 0; }
 
 /*# sourceMappingURL=style-xlarge.css.map */
