--- a/assets/css/style-large.css
+++ b/assets/css/style-large.css
@@ -1,14 +1,6 @@
 /* Basic */
-/* line 6, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-large.scss */
+/* line 6, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-large.scss */
 body, input, select, textarea {
   font-size: 11pt; }
-
-/* Banner */
-/* line 12, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-large.scss */
-#banner {
-  padding: 5em 0; }
-  /* line 15, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-large.scss */
-  #banner h2 {
-    font-size: 3.5em; }
 
 /*# sourceMappingURL=style-large.css.map */
