--- a/assets/css/style-small.css
+++ b/assets/css/style-small.css
@@ -1,43 +1,32 @@
 /* Basic */
-/* line 6, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+/* line 6, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
 body, input, select, textarea {
   font-size: 11pt; }
 
-/* Banner */
-/* line 12, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
-#banner {
-  padding: 5em 2em 4em 2em; }
-  /* line 15, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
-  #banner h2 {
-    font-size: 2.25em; }
-  /* line 19, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
-  #banner p {
-    font-size: 1.25em; }
-
 /* Main */
-/* line 26, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+/* line 12, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
 #main {
   padding: 2em 0; }
 
 /* Footer */
-/* line 32, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+/* line 18, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
 #footer {
   padding: 2em 0; }
-  /* line 36, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+  /* line 22, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
   #footer .copyright li {
     border-left: 0;
     margin-left: 0;
     padding-left: 0;
     display: block; }
 
-/* line 46, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+/* line 32, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
 .section-header hr {
   display: none; }
 
-/* line 52, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+/* line 38, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
 .loop-excerpt .post-header h3.post-featured {
   padding-bottom: 1em; }
-  /* line 54, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+  /* line 40, /Users/alex/Documents/ghost-v0.5.9/content/themes/aventurine/assets/sass/style-small.scss */
   .loop-excerpt .post-header h3.post-featured::after {
     display: block;
     margin-left: 0; }
