--- a/assets/sass/style-medium.scss
+++ b/assets/sass/style-medium.scss
@@ -15,16 +15,11 @@
 	}
 
 	#header {
+        margin:6em 0 3em 0;
         h1{
             position:relative;
             font-size:1.25em;
         }
-	}
-
-/* Banner */
-
-	#banner {
-		padding: 6em 2em;
 	}
 
 /* Layers */
