Made section headers bold

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -192,6 +192,7 @@
             text-align:left;
             h1,h2,h3,h4,h5,h6{
                 margin:0;
+                font-weight:700;
             }
         }
 	}
