Fixed issue with title not showing correctly. Added missing logo support.

--- a/partials/header/header-default.hbs
+++ b/partials/header/header-default.hbs
@@ -3,7 +3,15 @@
     <div class="container">
         <div class="12u">
             <div class="header-container">
-                <h1><a href="{{@blog.url}}">Aventurine</a></h1>
+                {{#if @blog.logo}}
+                    <div id="logo">
+                        <a href="{{@blog.url}}">
+                            <img src="{{@blog.logo}}" />
+                        </a>
+                    </div>
+                {{else}}
+                    <h1><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
+                {{/if}}
                 <nav id="nav">
                     {{navigation}}
                 </nav>
